# pydoclint

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  muff.toml  pydoclint.toml  pyproject.toml  requirements.dev  setup.cfg  tox.ini
.github/: .pre-commit-config-self-check.yaml
.github/helper_scripts/: check_version_and_changelog.py
.github/workflows/: check-changelog.yml  check-version.yml  claude-code-review.yml  claude.yml  python-package.yml  python-publish.yml
.pre_commit_helper_scripts/: check_full_diff_in_changelog.py  copy_readme.py
docs/: addl_notes.md  checking_class_attributes.md  config_options.md  config_options_1.md  how_to_config.md  how_to_ignore.md  index.md  main.md  notes_for_developers.md  notes_for_users.md  notes_generator_vs_iterator.md  style_deviations.md  style_mismatch.md  violation_codes.md
docs/subpages/: config_options.md
pydoclint/: __init__.py  arg.py  baseline.py  flake8_entry.py  internal_error.py  main.py  method_type.py  parse_config.py  violation.py  visitor.py
pydoclint/utils/: annotation.py  arg.py  astTypes.py  ast_types.py  doc.py  edge_case_error.py  generic.py  invisibleChars.py  method_type.py  noqa.py  parse_docstring.py  return_anno.py  return_arg.py  return_yield_raise.py  returns.py  returns_and_yields.py  special_methods.py  unparser.py  unparser_custom.py  violation.py  visitor_helper.py  walk.py  yield_arg.py
tests/: test_arg.py  test_baseline.py  test_edge_cases.py  test_end_to_end.py  test_generic.py  test_main.py  test_native_mode_noqa.py  test_noqa.py  test_parse_config.py  test_playground.py
tests/data/: playground.py
tests/data/args/: classmethod.py  function.py  method.py  staticmethod.py
tests/data/common/: property_method.py  style_mismatch.py
tests/data/edge_cases/: edge_case_01.py  edge_case_02_syntax_error_in_type_hints.py
tests/data/edge_cases/04_backticks/: google.py  numpy.py
tests/data/edge_cases/05_escape_char/: google.py  numpy.py  sphinx.py
tests/data/edge_cases/07_underscore_args/: google_with_violations.py
tests/data/edge_cases/08_return_section_parsing/: google.py
tests/data/edge_cases/09_double_quotes/: google.py  numpy.py
tests/data/edge_cases/09_double_quotes_in_Literal/: google.py  numpy.py
tests/data/edge_cases/10_absent_return_anno/: numpy.py
tests/data/edge_cases/12_property_methods_as_class_attr/: google.py
tests/data/edge_cases/14_folders_ending_in_py.py/: folder_is_empty_except_this_file.txt
tests/data/edge_cases/15_very_long_annotations/: google.py  numpy.py
tests/data/edge_cases/16_assign_to_attr/: cases.py
tests/data/edge_cases/20_invisible_zero_width_chars/: case.py
tests/data/edge_cases/21_syntax_error/: case.py
tests/data/edge_cases/22_PEP696_generator/: case.py
tests/data/edge_cases/22_docstring_parsing_error/: case.py
tests/data/edge_cases/23_bare_return_stmt_with_yield/: google.py
tests/data/edge_cases/25_underscore_and_private_args/: cases.py
tests/data/edge_cases/28_numpy_style_detection/: case.py
tests/data/edge_cases/30_comments_in_type_hints/: numpy.py
tests/data/edge_cases/31_syntax_error_in_parsing_type_hints/: numpy.py
tests/data/google/abstract_method/: cases.py
tests/data/google/allow_init_docstring/: cases.py
tests/data/google/arg_defaults/: cases.py
tests/data/google/class_attributes/: cases.py
tests/data/google/no_return_section/: cases.py
tests/data/google/parsing_errors/: cases.py
tests/data/google/property_method/: cases.py
tests/data/google/raises/: cases.py
tests/data/google/return_and_yield/: cases.py
tests/data/google/returning_noreturn/: cases.py
tests/data/google/returns/: classmethod.py  function.py  method.py  staticmethod.py
tests/data/google/short_docstrings/: cases.py
tests/data/google/star_args/: cases.py
tests/data/google/yields/: cases.py
tests/data/init/: init.py
tests/data/lib2to3_test_cases/: py2_test_grammar.py  py3_test_grammar.py
tests/data/numpy/abstract_method/: cases.py
tests/data/numpy/arg_defaults/: cases.py
tests/data/numpy/args/: defaults.py
tests/data/numpy/class_attributes/: cases.py  init_docstring.py
tests/data/numpy/no_return_section/: cases.py
tests/data/numpy/no_yield_section/: cases.py
tests/data/numpy/parsing_errors/: cases.py
tests/data/numpy/raises/: cases.py
tests/data/numpy/return_and_yield/: cases.py
tests/data/numpy/returning_none/: cases.py
tests/data/numpy/returning_noreturn/: cases.py
tests/data/numpy/returns/: classmethod.py  function.py  method.py  staticmethod.py
tests/data/numpy/star_args/: cases2.py
tests/data/numpy/yields/: cases.py
tests/data/raises/: cases.py
tests/data/returns/: classmethod.py  method.py  staticmethod.py
tests/data/short_docstrings/: cases.py
tests/data/sphinx/abstract_method/: cases.py
tests/data/sphinx/allow_init_docstring/: cases.py
tests/data/sphinx/args/: classmethod.py  function.py  method.py  staticmethod.py
tests/data/sphinx/class_attributes/: cases.py  init_docstring.py
tests/data/sphinx/no_return_section/: cases.py
tests/data/sphinx/parsing_errors/: cases.py
tests/data/sphinx/property_method/: cases.py
tests/data/sphinx/raises/: cases.py
tests/data/sphinx/return_and_yield/: cases.py
tests/data/sphinx/returns/: function.py  (+3 more)
tests/data/star_args/: cases.py
tests/data/yields/: cases.py
tests/test_data/: example_config.toml
tests/test_data/common/: property_method.py
tests/test_data/config_files/: example_config.toml  no_pydoclint_section.toml
tests/test_data/lib2to3_test_cases/: README.txt  infinite_recursion.py
tests/test_data/noqa/: sample_google.py  sample_numpy.py  sample_sphinx.py
tests/test_data/style_mismatch/: google_pure.py  mixed_styles.py  numpy_pure.py  sphinx_pure.py  this_can_be_any_style.py
tests/utils/: test_annotation.py  test_arg.py  test_generic.py  test_parse_docstring.py  test_return.py  test_return_anno.py  test_returns_and_yields.py  test_returns_yields_raise.py  test_special_methods.py  test_visitor_helper.py  test_walk.py
(+106 files in other folders)
