[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pydoclint"
version = "0.6.5"
description = "A Python docstring linter that checks arguments, returns, yields, and raises sections"
authors = [ {name = "Jian Shi"}, ]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "docstring_parser_fork>=0.0.12",
    "tomli>=2.0.1; python_version<'3.11'",
]
scripts = { pydoclint = "pydoclint.main:main" }

[project.optional-dependencies]
flake8 = ["flake8>=4"]

[project.entry-points."flake8.extension"]
DOC = "pydoclint.flake8_entry:Plugin"

[project.urls]
repository = "https://github.com/jsh9/pydoclint"
documentation = "https://pydoclint.readthedocs.io/"
homepage = "https://github.com/jsh9/pydoclint"
changelog = "https://github.com/jsh9/pydoclint/releases"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.cercis]
wrap-line-with-long-string = true
extend-exclude = 'tests/data'

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|.?venv|\.tox|tests/data|build'
require-return-section-when-returning-nothing = true
check-class-attributes = false

[tool.mypy]
strict = true
exclude = "pydoclint/utils/unparser.py"

[tool.setuptools]
# line below can be removed if project adopting src-layout
packages = ["pydoclint", "pydoclint.utils"]
