[metadata]
name = pydoclint
version = 0.0.4
description = A linter to check arguments in Python docstrings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsh9/pydoclint
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    flake8>=4
    click>=8.0.0
    numpydoc>=1.5.0
    docstring_parser>=0.15
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    pydoclint = pydoclint.main:main
flake8.extension =
    DOC = pydoclint.flake8_entry:Plugin

[bdist_wheel]
universal = True
