[metadata]
name = pydoclint
version = 0.6.4
description = A Python docstring linter that checks arguments, returns, yields, and raises sections
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsh9/pydoclint
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    click>=8.1.0
    docstring_parser_fork>=0.0.12
    tomli>=2.0.1; python_version<'3.11'
python_requires = >=3.9

[options.extras_require]
flake8 =
    flake8>=4

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    pydoclint = pydoclint.main:main
flake8.extension =
    DOC = pydoclint.flake8_entry:Plugin

[bdist_wheel]
universal = True
